<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/bg_dialog_network"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_noconect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/txt_no_connection"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/txt_check_your_internet"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_btn_apply"
        android:text="@string/txt_retry"
        android:fontFamily="@font/inter_regular"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

</LinearLayout>