<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bound_warning">

    <ImageView
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_clear_24"
        app:tint="@color/black" />


    <ImageView
        android:id="@+id/imv_cancle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_warning"
        app:tint="@android:color/holo_orange_light" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_cancle"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="10dp"
        android:text="@string/title_warning_version"
        android:textColor="#047BCA"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnGotoStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_goto_store"
        android:fontFamily="@font/inter_bold"
        android:padding="15dp"
        android:text="@string/txt_goto_store"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnDoLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGotoStore"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:padding="10dp"
        android:text="@string/txt_do_later"
        android:textColor="#D83955"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>