<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_circle_transparent"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_dialog_rating"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleDialogRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/txt_title_rate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDesDialogRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/txt_des"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnRating"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="6"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivStar1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating_disable"/>

                <ImageView
                    android:id="@+id/ivStar2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating_disable"/>

                <ImageView
                    android:id="@+id/ivStar3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating_disable"/>

                <ImageView
                    android:id="@+id/ivStar4"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating_disable"/>

                <ImageView
                    android:id="@+id/ivStar5"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating_disable"/>

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rating2" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:isIndicator="false"
                android:minHeight="30dp"
                android:numStars="5"
                android:progressDrawable="@drawable/ratingbar_full"
                android:rating="0"
                android:secondaryProgressTint="#00000000"
                android:stepSize="1"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tt"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/txt_the_best_rate"
                android:textAlignment="textEnd"
                android:textColor="#428E8E"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/tt"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_rating" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnMaybeLater"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_rating"
                android:clickable="true"
                android:elevation="@dimen/_10sdp"
                android:focusable="true"
                android:tag="0"
                android:text="@string/txt_maybe_later"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnRatingApp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_rating"
                android:clickable="true"
                android:elevation="@dimen/_10sdp"
                android:focusable="true"
                android:tag="0"
                android:text="@string/txt_rate_us"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <ImageView
        android:id="@+id/imgIconRate"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_rate_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>